
2017-02-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: do (setup_program_start) early in IDENTIFICATION DIVISION
	  if given, otherwise in PROGRAM ID / FUNCTION ID as we did before

2017-02-06  Ron Norman <rjn@inglenet.com>

	* codegen.c:
	  Emit routines cob_file_external_addr,cob_file_malloc,cob_file_free
	  so that 'cob_file' is allocated within libcob
	  This will allow the stucture have fields added to the end
	  without forcing a recompile. COB_FILE_VERSION is unchanged
	  Emit cob_module_free so that structure gets freed within libcob

2017-02-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c: fixed use of warn_cannot_get_utc while available

2017-02-02 Brian Tiffin <btiffin@gnu.org>

	* cobc.h: Updated CB_PENDING CB_UNIFINISHED macros with quieter ONCE_COB

2017-02-02 Brian Tiffin <btiffin@gnu.org>

	* cobc.h, warning.def: test cb_warn_pending in CB_PENDING message macro.

2017-01-30  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, reserved.c, tree.h: allow EXTERN, STDCALL and STATIC to be
	  disabled by mnemonics by removing (part of) their context flags.

2017-01-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.h: removed CB_CS_PROCEDURE, alphabetical order for CB_CS_...
	* pplex.l, ppparse.y, cobc.h, parser.y, tree.c:
	  implemented CALL-CONVENTION directive
	* parser.y, tree.h: removed cb_entry_convention - stored as
	  call-convention now
	* parser.y, codegen.c: implemented entry-convention for entry points
	  including stdcall generation
	* reserved.c, parser.y: removed WINAPI

2017-01-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: fix bug #271 by raising an error on UDF without PROCEDURE
	  DIVISION and generating a minimal entry when this occurs with a program
	* parser.y: work on SIZE IS for items passed BY VALUE
	* cobc.c (cobc_abort_msg): output "FUNCTION-ID" if we abort in a UDF

2017-01-22  Edward Hart <edward.dan.hart@gmail.com>
