@@ -8408,8 +8408,8 @@ output_entry_function (struct cb_program *prog, cb_tree entry,
 	/* entry convention */
 	l = CB_PURPOSE (CB_VALUE (entry));
 	if (!l || !(CB_INTEGER (l) || CB_NUMERIC_LITERAL_P (l))) {
-		/* not translated as it is a fatal abort, remove the check later */
-		cobc_err_msg ("Missing /wrong internal entry convention!");
+		/* not translated as it is an unlikely internal abort, remove the check later */
+		cobc_err_msg ("Missing/wrong internal entry convention!");
 		cobc_err_msg (_("Please report this!"));
 		COBC_ABORT ();
 	} else if (CB_INTEGER_P (l)) {
