@@ -1,4 +1,8 @@
 
+2017-03-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* parser.y: fix #362 one-liner not generating by setting entry_convention
+
 2017-02-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* parser.y: do (setup_program_start) early in IDENTIFICATION DIVISION
